# PEN-MATCH-API-V2

./: .gitignore  requirements-test.txt  requirements.txt  run_api.py
.github/workflows/: ACR-deploy.yml  AI-Search-Import.yml  pr-open.yml  test-app.yml  test-cosmos.yml  test-openAI.yml  test-search.yml
app/: .dockerignore  Dockerfile  cosmos.py  cosmos_import_test.py  embedding.py  pyproject.toml  requirements.txt  run_api.py  student_API.py  student_API_VM.py  student_embedding.py
app/api/: main.py  main_agent.py
app/azure_search/: azure_search_check.py  azure_search_fuzzy.py  azure_search_import.py  azure_search_import_v1.py  azure_search_index.json  azure_search_query.py  azure_search_query_v1.py  azure_search_setup.py
app/config/: logging_config.py  settings.py
app/core/: embedding_import.py  embedding_import_v1.py  pgvector_search.py  pgvector_search_v1.py  student_api.py  student_embedding.py  student_embedding_v2.py  student_match.py
app/database/: cosmos_client.py  oracledb_test.py  postgresql.py
app/evaluation/: test_dataset_conflict.py  test_dataset_review.py  test_dataset_typo.py  test_retrieval.py  test_review.py
app/fine_tune/: build_finetune_data.py  check_models.py  fine_tune.py
app/langchain/agents/: pen_match_agent.py
app/langchain/prompts/: pen_match_agent.py
app/pen_agent/: __init__.py  llm_client.py  nodes.py  pen_graph.py  prompt.py  schemas.py  state.py  test_workflow.py  workflow.py
app/test/: test_cosmos.py  test_student_match.py
