[project]
name = "pen-match-api-v2"
version = "0.1.0"
description = "PEN Match API V2 built with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "openai>=1.99.3",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings>=2.1.0",
    "psutil>=5.9.0",
    "langgraph>=0.6.4",
    "azure-core>=1.30.0",
    "azure-search-documents>=11.5.3",
    "tavily-python>=0.4.0",
    "langchain-community>=0.3.27",
    "azure-storage-blob>=12.26.0",
    "azure-identity>=1.24.0",
    "beautifulsoup4>=4.13.4",
    "azure-ai-documentintelligence>=1.0.2",
    "structlog>=25.4.0",
    "grandalf",
    "langgraph-checkpoint-redis",
    "redis",
    "scikit-learn==1.3.2",
    "numpy==1.24.3",
    "requests==2.31.0",
    "azure-cosmos==4.5.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"